--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap');
 
 :root {
     --Dark-Blue: hsl(240, 38%, 20%);
@@ -16,4 +16,47 @@
 
 * {
     box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Inter', sans-serif;
+}
+
+.container {
+    position: absolute;
+    top: 10%;
+    left: 22%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 400px;
+    width: 850px;
+}
+
+.quote {
+    position: absolute;
+    font-size: 1.5em;
+    font-weight: 300;
+    width: 480px;
+}
+
+.quote > strong {
+    font-size: 0.8em;
+    color: var(--Dark-Blue);
+}
+
+.quote > span {
+    font-size: 0.8em;
+    color: var(--Grayish-Blue);
+}
+
+.image > img {
+    position: relative;
+    left: 100%;
+    width: 400px;
+    height: 400px;
+    border-radius: 2px;
+    z-index: -2;
 }
